# split

./: CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  a.out  add_success.sh  build.sh  checkans.sh  cmake_install.cmake  common.h  compress.h  compress_common.h  decompress.h  large_build.sh  local_build.sh  merge  merge.cpp  remote_build.sh  small_build.sh  split  split.cpp
100x10x10/: type1.h5
100x10x10/1/: stock1  stock2  stock6  stock7  stock9
100x10x10/2/: stock0  stock1  stock4  stock8
merge.dSYM/Contents/Resources/DWARF/: merge
team-10/trade1/: stock3  stock4  stock5  stock8
team-10/trade2/: stock3  stock7  stock9
team-10/trade_merge/: stock0
trade1/: stock0
trade2/: prev_price  stock2  stock5  stock6
